==> He-YanHao/MCU_Project/STM32F4/STM32F407VGT6_示波器/Hardware/OLED.c <==
#include "OLED.h"
#include "OLED_font.h"

void OLED_WR_Byte(uint8_t dat,uint8_t cmd)
{	
	if(cmd)
	  OLED_DC_Set();
	else
	  OLED_DC_Clr();
	OLED_CS_Clr();
	
    //等待发送缓冲区为空
    while(RESET == SPI_I2S_GetFlagStatus(SPI1,  SPI_I2S_FLAG_TXE) );
    //通过SPI1发送一个字节数据 
    SPI_I2S_SendData(SPI1, dat);
 
    //等待接收缓冲区不空标志
    while(RESET == SPI_I2S_GetFlagStatus(SPI1,  SPI_I2S_FLAG_RXNE) );
    SPI_I2S_ReceiveData(SPI1);
	
	OLED_CS_Set();
	OLED_DC_Set();   	  
}

void OLED_Init(void)
{
	RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOA, ENABLE);//使能PORTA时钟
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_SPI1, ENABLE);
	
	/* 设置引脚复用 */
	GPIO_PinAFConfig(GPIOA, GPIO_PinSource5, GPIO_AF_SPI1);  
	GPIO_PinAFConfig(GPIOA, GPIO_PinSource7, GPIO_AF_SPI1); 

	/* 配置SPI引脚引脚*/
	GPIO_InitTypeDef  GPIO_InitStructure1;
	GPIO_InitStructure1.GPIO_Pin = GPIO_Pin_5|GPIO_Pin_7;
	GPIO_InitStructure1.GPIO_Speed = GPIO_Speed_100MHz;
	GPIO_InitStructure1.GPIO_Mode = GPIO_Mode_AF;
	GPIO_InitStructure1.GPIO_OType = GPIO_OType_PP;
	GPIO_InitStructure1.GPIO_PuPd = GPIO_PuPd_UP;  

	GPIO_Init(GPIOA, &GPIO_InitStructure1);
	

	GPIO_InitTypeDef  GPIO_InitStructure2;
	GPIO_InitStructure2.GPIO_Pin =  GPIO_Pin_3|GPIO_Pin_2|GPIO_Pin_4;
	GPIO_InitStructure2.GPIO_Mode = GPIO_Mode_OUT;//普通输出模式
	GPIO_InitStructure2.GPIO_OType = GPIO_OType_PP;//推挽输出
	GPIO_InitStructure2.GPIO_Speed = GPIO_Speed_100MHz;//100MHz
	GPIO_InitStructure2.GPIO_PuPd = GPIO_PuPd_UP;//上拉
	GPIO_Init(GPIOA, &GPIO_InitStructure2);//初始化
	GPIO_SetBits(GPIOA, GPIO_Pin_3|GPIO_Pin_2|GPIO_Pin_4 );
    
	/* FLASH_SPI 模式配置 */
	SPI_InitTypeDef   SPI_InitStructure;
	SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex; 
	SPI_InitStructure.SPI_Mode = SPI_Mode_Master;                // 配置为主机
	SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;        // 8位数据
	SPI_InitStructure.SPI_CPOL = SPI_CPOL_High;
	SPI_InitStructure.SPI_CPHA = SPI_CPHA_2Edge;                // 极性相位
	SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;                   // 软件cs
	SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_2; // SPI时钟预调因数为2
	SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;        //高位在前
	SPI_InitStructure.SPI_CRCPolynomial = 7;
	SPI_Init(SPI1, &SPI_InitStructure);

	/* 使能 SPI1  */
	SPI_Cmd(SPI1, ENABLE);
	
	OLED_RES_Clr();
	Delay_ms(200);
	OLED_RES_Set();

	OLED_WR_Byte(0xAE,OLED_CMD);//--turn off oled panel
	OLED_WR_Byte(0x00,OLED_CMD);//---set low column address
	OLED_WR_Byte(0x10,OLED_CMD);//---set high column address
	OLED_WR_Byte(0x40,OLED_CMD);//--set start line address  Set Mapping RAM Display Start Line (0x00~0x3F)
	OLED_WR_Byte(0x81,OLED_CMD);//--set contrast control register
	OLED_WR_Byte(0xCF,OLED_CMD);// Set SEG Output Current Brightness
	OLED_WR_Byte(0xA1,OLED_CMD);//--Set SEG/Column Mapping     0xa0左右反置 0xa1正常
	OLED_WR_Byte(0xC8,OLED_CMD);//Set COM/Row Scan Direction   0xc0上下反置 0xc8正常
	OLED_WR_Byte(0xA6,OLED_CMD);//--set normal display
	OLED_WR_Byte(0xA8,OLED_CMD);//--set multiplex ratio(1 to 64)
	OLED_WR_Byte(0x3f,OLED_CMD);//--1/64 duty
	OLED_WR_Byte(0xD3,OLED_CMD);//-set display offset        Shift Mapping RAM Counter (0x00~0x3F)
	OLED_WR_Byte(0x00,OLED_CMD);//-not offset
	OLED_WR_Byte(0xd5,OLED_CMD);//--set display clock divide ratio/oscillator frequency
	OLED_WR_Byte(0x80,OLED_CMD);//--set divide ratio, Set Clock as 100 Frames/Sec
	OLED_WR_Byte(0xD9,OLED_CMD);//--set pre-charge period
	OLED_WR_Byte(0xF1,OLED_CMD);//Set Pre-Charge as 15 Clocks & Discharge as 1 Clock
	OLED_WR_Byte(0xDA,OLED_CMD);//--set com pins hardware configuration
	OLED_WR_Byte(0x12,OLED_CMD);
	OLED_WR_Byte(0xDB,OLED_CMD);//--set vcomh
	OLED_WR_Byte(0x40,OLED_CMD);//Set VCOM Deselect Level
	OLED_WR_Byte(0x20,OLED_CMD);//-Set Page Addressing Mode (0x00/0x01/0x02)
	OLED_WR_Byte(0x02,OLED_CMD);//
	OLED_WR_Byte(0x8D,OLED_CMD);//--set Charge Pump enable/disable
	OLED_WR_Byte(0x14,OLED_CMD);//--set(0x10) disable
	OLED_WR_Byte(0xA4,OLED_CMD);// Disable Entire Display On (0xa4/0xa5)
	OLED_WR_Byte(0xA6,OLED_CMD);// Disable Inverse Display On (0xa6/a7) 
	OLED_Clear();
	OLED_WR_Byte(0xAF,OLED_CMD);
}
